2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* Engine.mdp: Added po files to MonoDevelop projects.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Engine.cs: Show platform and CPU bit count in version string.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Engine.cs: Fixed switching between local engine and remote engine back and
	  forth. (closes trac bug #106)

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Messages/UrlMessagePartModel.cs: Fallback to HTTP.

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* FrontendManager.cs, Protocols/ProtocolManagerBase.cs, Session.cs: Using
	  LibraryCatalog now.

2008-08-22  Mirco Bauer <meebey@meebey.net> 

	* Config/ServerListController.cs: Throw exception in AddServer() if the
	  server exists already. (closes trac bug #100)
	
	  Added null checks to all methods.

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* Persons/ContactModel.cs, Persons/PersonModel.cs: Fixed whitespace
	  (replaced \t with 4 spaces).

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Don't handle quit command in session. (closes trac bug #92)

2008-08-04  Mirco Bauer <meebey@meebey.net> 

	* TextColor.cs: Renamed HexCode to Value.
	
	  Added HexCode property returning a #XXXXXX string.
	
	  Implemented ToString(), GetHashCode(), Equals(), ==, and !=.
	
	  Added ctor with RGB as byte parameters.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs, AssemblyInfo.cs.in: Removed AssemblyInfo.cs.in files, not
	  needed anymore as we use a shared AssemblyVersion.cs(.in) now.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Engine.mdp: Removed assembly attributes that are now part of the shared
	  AssemblyVersion.cs file.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-07-16  Mirco Bauer <meebey@meebey.net> 

	* Config/Config.cs: Implemented basic theming support (closes trac bug #19).

2008-07-15  Mirco Bauer <meebey@meebey.net> 
