@@ -1,3 +1,7 @@
+2008-09-04  Mirco Bauer <meebey@meebey.net> 
+
+	* Session.cs: Added hint about /help command to smuxi page.
+
 2008-08-31  Mirco Bauer <meebey@meebey.net> 
 
 	* Engine.mdp: Added po files to MonoDevelop projects.
